--- a/index-spanish.html
+++ b/index-spanish.html
@@ -26,11 +26,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
+				
+				<h1>This is a Spanish test</h1>
 
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 id="banner-title">CITIZENSHIP - but it's Spanish</h1>
+							<h1 id="banner-title">CITIZENSHIP</h1>
 							<p class="major" id="banner-body">BY INVESTMENT PROGRAMME</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle" id="banner-button">Get Started</a></li>
