--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 						<div class="inner medium">
 							<h2>Get in touch to learn more</h2>
 							<h3>We can easily arrange online video meetings early into the process, to help provide you with any additional details.</h3>
-							<form id="form">
+							<form action="https://formspree.io/f/mjvdynap" method="POST">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -442,7 +442,7 @@
 				-->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>&copy; Citizenship by Investment. Images: <a href="https://unsplash.com/">Unsplash</a> Design: <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>&copy; 2023 Citizenship by Investment. Images: <a href="https://unsplash.com/">Unsplash</a> Design: <a href="https://html5up.net">HTML5 UP</a></p>
 						</div>
 					</footer>	
 
@@ -457,6 +457,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/language.js"></script>
-			<script src="assets/js/email.js"></script>
 	</body>
 </html>
