added benefits tags

--- a/index.html
+++ b/index.html
@@ -248,59 +248,59 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Why Saint Kitts and Nevis?</h2>
+							<h2 id="benefits-title">Why Saint Kitts and Nevis?</h2>
 							<!--
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 							-->
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Ease of Traveling</h3>
-									<p>Visa-free access to nearly 150 countries, including the United Kingdom (180 days for tourism, conferences, family, etc), the <b>(<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a></b>, for a period of 3 months during a 6 months period with ETIAS), HK, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
+									<h3 id="benefits-one-title">Ease of Traveling</h3>
+									<p id="benefits-one-body">Visa-free access to nearly 150 countries, including the United Kingdom (180 days for tourism, conferences, family, etc), the <b>(<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a></b>, for a period of 3 months during a 6 months period with ETIAS), HK, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Required Residency</h3>
-									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are entitled to live there, as such residency is <b>optional</b> and not mandatory, there are no visitation requirements to apply and obtain the Saint Kitts and Nevis citizenship, and the jurisdiction permits dual/multiple citizenship.</p>
+									<h3 id="benefits-two-title">Required Residency</h3>
+									<p id="benefits-two-body">There is no requirement to live or reside in Saint Kitts and Nevis, but you are entitled to live there, as such residency is <b>optional</b> and not mandatory, there are no visitation requirements to apply and obtain the Saint Kitts and Nevis citizenship, and the jurisdiction permits dual/multiple citizenship.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later, a second passport also increases chances for children to attend international universities with admission policies based on citizenship quota, etc.</p>
+									<h3 id="benefits-three-title">Dependents</h3>
+									<p id="benefits-three-body">You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later, a second passport also increases chances for children to attend international universities with admission policies based on citizenship quota, etc.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Discretion</h3>
-									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, the program represents a short-term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word.</p>
+									<h3 id="benefits-four-title">Discretion</h3>
+									<p id="benefits-four-body">Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, the program represents a short-term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Stability</h3>
-									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy, Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of international visa approvals.</p>
+									<h3 id="benefits-five-title">Stability</h3>
+									<p id="benefits-five-body">A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy, Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of international visa approvals.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Wealth Management</h3>
-									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting greater future educational opportunities for children.</p>
+									<h3 id="benefits-six-title">Wealth Management</h3>
+									<p id="benefits-six-body">An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting greater future educational opportunities for children.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Efficient Process</h3>
-									<p>A hassle-free and <b>efficient application process</b>, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process.</p>
+									<h3 id="benefits-seven-title">Efficient Process</h3>
+									<p id="benefits-seven-body">A hassle-free and <b>efficient application process</b>, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Accelerated Process</h3>
-									<p>There is also an <b>Accelerated Application Process (AAP)</b> approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
+									<h3 id="benefits-eight-title">Accelerated Process</h3>
+									<p id="benefits-eight-body">There is also an <b>Accelerated Application Process (AAP)</b> approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis, an independent <b>member of the Commonwealth since 1983</b> following independence from Britain, is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
+									<h3 id="benefits-nine-title">Pristine Environment</h3>
+									<p id="benefits-nine-body">Saint Kitts and Nevis, an independent <b>member of the Commonwealth since 1983</b> following independence from Britain, is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle" id="benefits-button">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
