--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
 				<!-- Frequently Asked Questions -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Frequently Asked Questions</h2>
+							<h2 id="faq-title">Frequently Asked Questions</h2>
 							<!--
 							<p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
 							-->
-							<p>Here are some frequently asked questions and answers you might find useful.</p>
+							<p id="faq-body">Here are some frequently asked questions and answers you might find useful.</p>
 							<div class="index align-left">
 								
 								<!-- Definition List -->
@@ -325,69 +325,69 @@
 										<div class="content">
 
 											<dl>
-												<dt>1. What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
+												<dt id="faq-one-title">1. What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
 												<dd>
-													<p>The "<b>Main Applicant</b>" (often abbreviated “<b>MA</b>” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
+													<p id="faq-one-body">The "<b>Main Applicant</b>" (often abbreviated “<b>MA</b>” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
-												<dt>2. Can I contact the "Citizenship by Investment Unit" (CIU) directly?</dt>
+												<dt id="faq-two-title">2. Can I contact the "Citizenship by Investment Unit" (CIU) directly?</dt>
 												<dd>
-													<p>No, the CIU limits its communication to ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
+													<p id="faq-two-body">No, the CIU limits its communication to ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
 												</dd>
-												<dt>3. Are the application forms available online?</dt>
+												<dt id="faq-three-title">3. Are the application forms available online?</dt>
 												<dd>
-													<p>No, the application forms for Citizenship by Investment can only be obtained and also submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
+													<p id="faq-three-body">No, the application forms for Citizenship by Investment can only be obtained and also submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
-												<dt>4. How long does the application process take?</dt>
+												<dt id="faq-four-title">4. How long does the application process take?</dt>
 												<dd>
-													<p>The application process may take as little as 60~90 days (counting from the submission and acceptance of all documents) but may be delayed depending on the profile of the applicant. Applicants will be kept informed regularly of the status of their applications through their ‘Authorized Person’.</p>
+													<p id="faq-four-body">The application process may take as little as 60~90 days (counting from the submission and acceptance of all documents) but may be delayed depending on the profile of the applicant. Applicants will be kept informed regularly of the status of their applications through their ‘Authorized Person’.</p>
 												</dd>
-												<dt>5. Can I submit my application in a language other than English?</dt>
+												<dt id="faq-five-title">5. Can I submit my application in a language other than English?</dt>
 												<dd>
-													<p>No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a <b>certified translated English</b> version.</p>
+													<p id="faq-five-body">No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a <b>certified translated English</b> version.</p>
 												</dd>
-												<dt>6. Can two or more applicants apply for citizenship by investment together?</dt>
+												<dt id="faq-six-title">6. Can two or more applicants apply for citizenship by investment together?</dt>
 												<dd>
-													<p>Yes. Two or more applicants may apply for citizenship together by purchasing one piece of real estate, provided each main applicant contributes the minimum investment.</p>
+													<p id="faq-six-body">Yes. Two or more applicants may apply for citizenship together by purchasing one piece of real estate, provided each main applicant contributes the minimum investment.</p>
 												</dd>
-												<dt>7. Can my family be included with my application?</dt>
+												<dt id="faq-seven-title">7. Can my family be included with my application?</dt>
 												<dd>
-													<p>Yes. All permitted dependents (spouse, children, siblings, parents, etc.) can easily be included in your application for economic citizenship, providing the relationship with each dependent meets certain specific basic financial criteria (e.g., economic dependency).</p>
+													<p id="faq-seven-body">Yes. All permitted dependents (spouse, children, siblings, parents, etc.) can easily be included in your application for economic citizenship, providing the relationship with each dependent meets certain specific basic financial criteria (e.g., economic dependency).</p>
 												</dd>
-												<dt>8. Who are permitted dependents?</dt>
+												<dt id="faq-eight-title">8. Who are permitted dependents?</dt>
 												<dd>
-													<p>Permitted dependents include: a spouse of the main applicant; a child if under 18 years of the main applicant or of his/her spouse; a child if between 18 and 30 years of the main applicant or his/her spouse, who is in full-time attendance at a recognized institution of higher learning after his/her 18th birthday, and who is fully supported by the main applicant; parents and/or grandparents of the main applicant or his/her spouse above the age of 55, living with and supported economically by the main applicant; a child if above the age of 18 of the main applicant or his/ her spouse and who is physically or mentally disabled; and a sibling of the main applicant or his/her spouse who is unmarried, childless, 30 years of age or younger and dependent on the applicant for financial support.</p>
+													<p id="faq-eight-body">Permitted dependents include: a spouse of the main applicant; a child if under 18 years of the main applicant or of his/her spouse; a child if between 18 and 30 years of the main applicant or his/her spouse, who is in full-time attendance at a recognized institution of higher learning after his/her 18th birthday, and who is fully supported by the main applicant; parents and/or grandparents of the main applicant or his/her spouse above the age of 55, living with and supported economically by the main applicant; a child if above the age of 18 of the main applicant or his/ her spouse and who is physically or mentally disabled; and a sibling of the main applicant or his/her spouse who is unmarried, childless, 30 years of age or younger and dependent on the applicant for financial support.</p>
 												</dd>
-												<dt>9. Does the program recognize same sex marriage?</dt>
+												<dt id="faq-nine-title">9. Does the program recognize same sex marriage?</dt>
 												<dd>
-													<p>No, the laws of Saint Kitts and Nevis currently define “spouse” as the partner of the opposite sex by marriage.</p>
+													<p id="faq-nine-body">No, the laws of Saint Kitts and Nevis currently define “spouse” as the partner of the opposite sex by marriage.</p>
 												</dd>
-												<dt>10. What is the maximum number of dependents allowed by a main applicant?</dt>
+												<dt id="faq-ten-title">10. What is the maximum number of dependents allowed by a main applicant?</dt>
 												<dd>
-													<p>There is <b>no limit</b> on the number of permitted dependents.</p>
+													<p id="faq-ten-body">There is <b>no limit</b> on the number of permitted dependents.</p>
 												</dd>
-												<dt>11. What are the fees involved?</dt>
+												<dt id="faq-eleven-title">11. What are the fees involved?</dt>
 												<dd>
-													<p>All applicants and permitted dependents are required to pay due diligence and processing fees, which will be presented by the ‘Authorized Person’ at application.</p>
+													<p id="faq-eleven-body">All applicants and permitted dependents are required to pay due diligence and processing fees, which will be presented by the ‘Authorized Person’ at application.</p>
 												</dd>
-												<dt>12. Can an applicant remit fees directly to the CIU?</dt>
+												<dt id="faq-twelve-title">12. Can an applicant remit fees directly to the CIU?</dt>
 												<dd>
-													<p>No, all applicants are required to pay the processing fees, the due diligence fees as well as the Government fees through their chosen ‘Authorized Person’. Wire transfers to the Unit are only applicable for approved applicants for the remittance of Sustainable Growth Fund contributions.</p>
+													<p id="faq-twelve-body">No, all applicants are required to pay the processing fees, the due diligence fees as well as the Government fees through their chosen ‘Authorized Person’. Wire transfers to the Unit are only applicable for approved applicants for the remittance of Sustainable Growth Fund contributions.</p>
 												</dd>
-												<dt>13. If I am no longer interested in becoming a citizen, will my monies be refunded?</dt>
+												<dt id="faq-thirteen-title">13. If I am no longer interested in becoming a citizen, will my monies be refunded?</dt>
 												<dd>
-													<p>A portion of the application fees can indeed be refunded, with the exception of the due diligence fees, the processing fees and perhaps some of the services charges already executed.</p>
+													<p id="faq-thirteen-body">A portion of the application fees can indeed be refunded, with the exception of the due diligence fees, the processing fees and perhaps some of the services charges already executed.</p>
 												</dd>
-												<dt>14. Do I have to reside in Saint Kitts and Nevis in order to apply for citizenship?</dt>
+												<dt id="faq-fourteen-title">14. Do I have to reside in Saint Kitts and Nevis in order to apply for citizenship?</dt>
 												<dd>
-													<p>Residing in Saint Kitts and Nevis is <b>not</b> required when applying for citizenship using the Citizenship by Investment Option.</p>
+													<p id="faq-fourteen-body">Residing in Saint Kitts and Nevis is <b>not</b> required when applying for citizenship using the Citizenship by Investment Option.</p>
 												</dd>
-												<dt>15. What is a police certificate and who is required to produce a police certificate?</dt>
+												<dt id="faq-fifteen-title">15. What is a police certificate and who is required to produce a police certificate?</dt>
 												<dd>
-													<p>A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”. Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can easily provide you with support regarding the obtention of the certificate.</p>
+													<p id="faq-fifteen-body">A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”. Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can easily provide you with support regarding the obtention of the certificate.</p>
 												</dd>
-												<dt>16. What kind of forms and documents need to be submitted to process the application?</dt>
+												<dt id="faq-sixteen-title">16. What kind of forms and documents need to be submitted to process the application?</dt>
 												<dd>
-													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our <b>team will guide you along the process</b> and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
+													<p id="faq-sixteen-body">There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our <b>team will guide you along the process</b> and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
 												</dd>
 											</dl>
 
