--- a/index.html
+++ b/index.html
@@ -401,20 +401,20 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center" id="contact">
 						<div class="inner medium">
-							<h2>Get in touch to learn more</h2>
-							<h3>We can easily arrange online video meetings early into the process, to help provide you with any additional details.</h3>
+							<h2 id="contact-title">Get in touch to learn more</h2>
+							<h3 id="contact-body">We can easily arrange online video meetings early into the process, to help provide you with any additional details.</h3>
 							<form action="https://formspree.io/f/mjvdynap" method="POST">
 								<div class="fields">
 									<div class="field half">
-										<label for="name">Name</label>
+										<label for="name" id="contact-name">Name</label>
 										<input type="text" name="name" id="name" value="" />
 									</div>
 									<div class="field half">
-										<label for="email">Email</label>
+										<label for="email" id="contact-email">Email</label>
 										<input type="email" name="email" id="email" value="" />
 									</div>
 									<div class="field">
-										<label for="message">Message</label>
+										<label for="message" id="contact-message">Message</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 								</div>
