--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 				-->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>&copy; 2023 Citizenship by Investment. Images: <a href="https://unsplash.com/">Unsplash</a> Design: <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>&copy; 2023 Citizenship by Investment. Design: <a href="https://html5up.net">HTML5 UP</a></p>
 						</div>
 					</footer>	
 
