--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><input name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
 								<p id="status"></p>
 							</form>
