--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 				-->
-							<p>&copy; 2023 Citizenship by Investment. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p id="footer">&copy; 2023 Citizenship by Investment. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 			</div>
