Adding New Zealand to English version

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2 id="record-title">Successful Track Record</h2>
-							<p id="record-body-one">Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>China</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
+							<p id="record-body-one">Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>China</b>, <b>Libya</b>, <b>New Zealand</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
 							<p id="record-body-two">Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(currently including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 					</section>
