About Us section added (test) March 13

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="inner">
 							<h2 id="record-title">Successful Track Record</h2>
 							<p id="record-body-one">Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>China</b>, <b>Libya</b>, <b>New Zealand</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
-							<p id="record-body-two">Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(currently including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
+							<p id="record-body-two">Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(currently including <i>Saint Kitts & Nevis</i>, <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 					</section>
 
@@ -239,7 +239,18 @@
 									</section>
 							</div>
 					</section>
-															
+
+				<!-- ADDED SECTION for the ABOUT US portion -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2 id="XXX-record-title">About Us</h2>
+							<p id="XXX-record-body-one">We are a team of international members specialized in the fields of <b>Citizenship by Investment</b> (CBI), <b>Corporate Law</b>, <b>Trust and Corporate Services</b>, <b>Offshore Banking</b>, as well as <b>Anti-Money Laundering and Counter-Terrorist Financing</b> (AML/CFT) regulatory obligations.</p>
+							<p id="XXX-record-body-two">Our main lawyer, Diana Claxton Whittaker, gained years of experience by successfully and efficiently performing the joint roles of Legal Advisor and Compliance Officer at one of Nevis’ leading Financial Services company which was established in 1994. Diana is thus one of the few lawyers in the Federation of Saint Kitts and Nevis with experience in processing applications for the various CBI Programmes in the Caribbean, as well as jurisdictions such as Vanuatu.</p>
+							<p id="XXX-record-body-three">The services offered by our team are uniquely tailored to provide sound corporate and citizenship solutions with the sole aim of protecting the futures of our clientele, their families and their assets, whether our clients need consultation on a legal structure or <b>corporate entity</b> to maximize asset protection, or the processing of a <b>Citizenship by Investment</b> (CBI), or <b>Residency by Investment</b> (RBI) application.</p>
+						</div>
+					</section>
+
+
 				<!-- Seven -->
 					<section class="wrapper style1 align-center" id="contact">
 						<div class="inner medium">
