--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2 id="XXX-record-title">About Us</h2>
+							<p id="XXX-faq-body">Who We Are and What We Do</p>
 							<p id="XXX-record-body-one">We are a team of international members specialized in the fields of <b>Citizenship by Investment</b> (CBI), <b>Corporate Law</b>, <b>Trust and Corporate Services</b>, <b>Offshore Banking</b>, as well as <b>Anti-Money Laundering and Counter-Terrorist Financing</b> (AML/CFT) regulatory obligations.</p>
 							<p id="XXX-record-body-two">Our main lawyer, <b>Diana Claxton Whittaker</b>, gained years of experience by successfully and efficiently performing the joint roles of Legal Advisor and Compliance Officer at one of Nevis’ leading Financial Services company which was established in 1994. Diana is thus one of the few lawyers in the Federation of Saint Kitts and Nevis with experience in processing applications for the various CBI Programmes in the Caribbean, as well as jurisdictions such as Vanuatu.</p>
 							<p id="XXX-record-body-three">The services offered by our team are uniquely tailored to provide sound corporate and citizenship solutions with the sole aim of protecting the futures of our clientele, their families and their assets, whether our clients need consultation on a legal structure or <b>corporate entity</b> to maximize asset protection, or the processing of a <b>Citizenship by Investment</b> (CBI), or <b>Residency by Investment</b> (RBI) application.</p>
