--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 												</dd>
 												<dt id="faq-sixteen-title">16. What kind of forms and documents need to be submitted to process the application?</dt>
 												<dd>
-													<p id="faq-sixteen-body">There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our <b>team will guide you along the process</b> and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
+													<p id="faq-sixteen-body">There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our <b>team will guide you along the process</b> and provide you with the full list of elements to assemble, to ensure a successful application.</p>
 												</dd>
 											</dl>
 
