--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
 							</ul>
 				-->
 							<p id="footer">&copy; 2023 Citizenship by Investment. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>THIS IS A TEST</p>
 							<p id="footer">&copy; TEST Citizenship by Investment. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 
 						</div>
