--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 id="banner-title">CITIZENSHIP</h1>
+							<h1 id="banner-title">CITIZENSHIP AND RESIDENCY</h1>
 							<p class="major" id="banner-body">BY INVESTMENT PROGRAMME</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle" id="banner-button">Get Started</a></li>
